# tildee

./: .gitignore  .readthedocs.yml  LICENSE  README.md  README.rst  TODO.md  pyproject.toml  requirements.txt  test.py
docs/: client.rst  conf.py  index.rst  models.rst
tests/: test_tildee.py
tildee/: __init__.py  models.py
