[tool.poetry]
name = "tildee"
version = "0.1.0"
description = "A client for tildes.net"
license = "MIT"
authors = ["deing <admin@15318.de>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
lxml = "^4.3"
cssselect = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
